# grimoire-cli

./: CHANGELOG.md  Cargo.toml  README.md  justfile
src/: browse.rs  main.rs  output.rs  pattern.rs  setup.rs
